# pgrouting

./: .editorconfig  .travis.yml  CMakeLists.txt  LICENSE  NEWS  NEWS.md  VERSION  configuration.conf
.github/scripts/: update_locale.sh
.github/workflows/: boost_version.yml  centos.yml  check-files.yml  check-queries.yml  clang.yml  doc-check.yml  documentation.yml  locale-and-website.yml  macos.yml  pgtest.yml  tidy-check.yml  ubuntu.yml  update-locale.yml  update.yml  windows.yml
1.x/_static/: page_history.js
ci/bessie/: regress.sh
ci/bessie32/: regress.sh
ci/debbie/: regress.sh
ci/winnie/: build_pgrouting.sh  package_pgrouting.sh
cmake/: FindPostgreSQL.cmake  FindSphinx.cmake
doc/: CMakeLists.txt  conf.py.in
doc/_static/: CMakeLists.txt  page_history.js
doc/_templates/: CMakeLists.txt
doc/allpairs/: CMakeLists.txt  allpairs-family.rst  pgr_floydWarshall.rst  pgr_johnson.rst
doc/alpha_shape/: pgr_alphaShape.rst
doc/astar/: CMakeLists.txt  aStar-family.rst  pgr_aStar.rst  pgr_aStarCost.rst  pgr_aStarCostMatrix.rst
doc/bdAstar/: CMakeLists.txt  bdAstar-family.rst  pgr_bdAstar.rst  pgr_bdAstarCost.rst  pgr_bdAstarCostMatrix.rst
doc/bdDijkstra/: CMakeLists.txt  pgr_bdDijkstra.rst  (+3 more)
doxygen/: CMakeLists.txt
sql/: CMakeLists.txt
src/ordering/: CMakeLists.txt  cuthillMckeeOrdering.c  cuthillMckeeOrdering.cpp  cuthillMckeeOrdering_driver.cpp  kingOrdering.c  kingOrdering.cpp  ordering_driver.cpp  ordering_process.cpp  sloanOrdering.c  sloanOrdering.cpp  topologicalSort.c  topologicalSort.cpp  topologicalSort_driver.cpp
tools/: test-runner.pl
(+2079 files in other folders)
